<resources>
    <string name="app_name">ZeSmart</string>
    <string name="logo_icon">Logo Icon</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="pertanyaan_register">Already have an account? <b>Log in</b></string>
    <string name="pertanyaan_login">Don’t have an account? <b>Sign up</b></string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="detail_materi_content">Web development is the work involved in developing a Web site for the Internet (World Wide Web) or an intranet (a private network). <br />
[1] Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services. A more comprehensive list of tasks to which Web development commonly refers, may include Web engineering, Web design, Web content development, client liaison, client-side/server-side scripting, Web server and network security configuration, and e-commerce development.</string>
    <string name="schedule_date_time"><![CDATA[Schedule date & time]]></string>
    <string name="image_back">Image Back</string>
    <string name="design">Design</string>
    <string name="image_submit_materi">Image Submit Materi</string>
    <string name="available_time">Available Time</string>
    <string name="detail_materi">Detail Materi</string>
    <string name="detail">Detail</string>
    <string name="materi">Materi</string>
    <string name="video">Video</string>
</resources>