<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo_icon"
                    android:src="@drawable/logo_small"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="#102755"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_semi_bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="18dp"

                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="23dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="#102755"
                    android:hint="@string/email"
                    app:hintTextColor="#102755"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/icon_ceklis"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F6F7FA"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="15dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="23dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="#102755"
                    android:hint="@string/username"
                    app:hintTextColor="#102755"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/icon_ceklis"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F6F7FA"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="text"
                        android:paddingHorizontal="15dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:endIconMode="password_toggle"
                    android:layout_marginTop="23dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="#102755"
                    android:hint="@string/password"
                    app:hintTextColor="#102755"
                    app:boxStrokeWidthFocused="1dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F6F7FA"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textPassword"
                        android:paddingHorizontal="15dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:endIconMode="password_toggle"
                    android:layout_marginTop="23dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="#102755"
                    android:hint="@string/confirm_password"
                    app:hintTextColor="#102755"
                    app:boxStrokeWidthFocused="1dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F6F7FA"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textPassword"
                        android:paddingHorizontal="15dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="52dp"
                    android:backgroundTint="#102755"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:onClick="doRegister"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:id="@+id/suruh_login"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#102755"
                        android:text="@string/pertanyaan_register"
                        android:fontFamily="@font/poppins_semi_bold">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>