<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo_icon"
                    android:src="@drawable/logo_small"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textColor="#102755"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_semi_bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="18dp"

                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="23dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="#102755"
                    android:hint="@string/email"
                    app:hintTextColor="#102755"
                    app:boxStrokeWidthFocused="1dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/icon_ceklis"
                    android:layout_gravity="center_vertical"


                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:background="#F6F7FA"
                        android:paddingHorizontal="15dp"

                        android:fontFamily="@font/poppins_regular"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:endIconMode="password_toggle"
                    android:layout_marginTop="45dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeColor="#102755"
                    android:hint="@string/password"
                    app:hintTextColor="#102755"
                    app:boxStrokeWidthFocused="1dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:background="#F6F7FA"
                        android:paddingHorizontal="15dp"
                        android:fontFamily="@font/poppins_regular"

                        />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="55dp"
                    android:backgroundTint="#102755"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="15dp"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:fontFamily="@font/poppins_semi_bold"/>


                <androidx.percentlayout.widget.PercentRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    >

                    <View
                        android:id="@+id/garis_1"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:background="#102755"
                        app:layout_widthPercent="45%" />

                    <TextView
                        android:id="@+id/text_or"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/or"
                        app:layout_widthPercent="10%"
                        android:layout_toEndOf="@+id/garis_1"
                        android:textAlignment="center"
                        android:fontFamily="@font/poppins_semi_bold"
                        />

                    <View
                        android:id="@+id/garis_2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_toEndOf="@+id/text_or"
                        android:background="#102755"
                        app:layout_widthPercent="45%"
                        android:layout_centerVertical="true"/>

                </androidx.percentlayout.widget.PercentRelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    >
                    <TextView
                        android:id="@+id/suruh_register"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#102755"
                        android:text="@string/pertanyaan_login"
                        android:fontFamily="@font/poppins_semi_bold">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>